# IdleFinance

./: pyproject.toml
IdleFinance/: __init__.py
IdleFinance/core/: __init__.py  accessor.py
IdleFinance/models/: risk_metrics.py
IdleFinance/utils/: __init__.py  basic.py  return_utils.py
