[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "IdleFinance"
version = "0.1.0"
description = "A Python library for quantitative finance and financial modeling"
authors = [
    { name = "Leandro Fabre", email = "lm.fabre@hotmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
]

[tool.setuptools]